force-app/main/default/objects/rS_Dynamic_Datatable__mdt/rS_Dynamic_Datatable__mdt.object-meta.xml
<CustomObject>
    <label>rS_Dynamic Datatable</label>
    <pluralLabel>rS_Dynamic Datatables</pluralLabel>
</CustomObject>