force-app/main/default/objects/rS_Dynamic_Datatable__mdt/fields/Dynamic_Field__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Field__c</fullName>
    <label>Dynamic Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>