force-app/main/default/objects/rS_Dynamic_Datatable__mdt/fields/ObjectAPI_Name__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPI_Name__c</fullName>
    <inlineHelpText>API name of the object.</inlineHelpText>
    <label>ObjectAPI Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>