force-app/main/default/objects/rS_Dynamic_Datatable__mdt/fields/RS_LastNDays__c.field-meta.xml
<CustomField>
    <fullName>RS_LastNDays__c</fullName>
    <label>LastNDays</label>
    <length>18</length>
    <type>Text</type>
</CustomField>