force-app/main/default/objects/rS_Dynamic_Datatable__mdt/fields/Static_Field__c.field-meta.xml
<CustomField>
    <fullName>Static_Field__c</fullName>
    <label>Static Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>