force-app/main/default/objects/rS_Dynamic_Datatable__mdt/fields/typeAttributes__c.field-meta.xml
<CustomField>
    <fullName>typeAttributes__c</fullName>
    <label>typeAttributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>